package com.estaciones.domain.model;

public record Provincia(
    String idProvincia,
    String idCcaa,
    String nombreProvincia
) {}


