package com.estaciones.domain.model;

public record ComunidadAutonoma(
    String idCcaa,
    String nombreCcaa
) {}


