package com.estaciones.domain.model;

public record Municipio(
    String idMunicipio,
    String idProvincia,
    String idCcaa,
    String nombreMunicipio
) {}


