package com.estaciones.domain.model;

public record ProductoPetrolifero(
    String idProducto,
    String nombreProducto,
    String nombreAbreviatura
) {}


